--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '4.0.2'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'org.asciidoctor.jvm.convert' version '4.0.5'
+    id "com.diffplug.spotless" version "6.25.0"
 }
 
 group = 'com.example'
@@ -54,6 +55,22 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+spotless {
+    java {
+        importOrder()
+        removeUnusedImports()
+        formatAnnotations()
+        googleJavaFormat('1.19.1')
+        endWithNewline()
+    }
+
+    format("misc") {
+        target("*.md", ".gitignore", "*.yml", "*.yaml")
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
 }
 
 tasks.named('test') {
