--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Lunar
+
+server.port=${SERVER_PORT:8080}
+
+spring.profiles.active=${SPRING_PROFILE:dev}
+
+spring.jpa.open-in-view=false
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
