feat: Update CI run with profile is test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Clean build
         run: ./gradlew clean build
         env:
-          SPRING_PROFILE: test
+          SPRING_PROFILES_ACTIVE: test
