--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Lunar
 
 server.port=${SERVER_PORT:8080}
 
-spring.profiles.active=${SPRING_PROFILE:dev}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 spring.jpa.open-in-view=false
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
