--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,4 @@ jobs:
         run: ./gradlew spotlessApply spotlessJavaApply
 
       - name: Clean build
-        run: ./gradlew clean build
-        env:
-          SPRING_PROFILES_ACTIVE: test
+        run: ./gradlew clean build -Dspring.profiles.active=test
