--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -21,6 +21,9 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  output:
+    ansi:
+      enabled: ALWAYS
 
 logging:
   level:
