--- a/src/main/resources/application-uat.yaml
+++ b/src/main/resources/application-uat.yaml
@@ -19,3 +19,9 @@ spring:
     hibernate:
       ddl-auto: validate
     show-sql: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
