--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 spring.jpa.open-in-view=false
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
+
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
