[Feat/common-config] Add common config for init project (#12)
* feat: Add log-back configuration (string format for dev, json format for prod)

* feat: Add handle global exception

* feat: Add redis config

* feat: Run spotless

* feat: Add write log to file for production mode

---------

Co-authored-by: tuan.nguyenvan <nvqtuan@cmcglobal.vn>

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -22,6 +22,14 @@ spring:
       ddl-auto: validate
     show-sql: false
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+
 logging:
+  file:
+    name: /var/log/lunar/app.log
   level:
     root: INFO
