--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,51 @@
 services:
+
   postgres:
     image: postgres:15
-    container_name: demo-postgres
+    container_name: lunar-postgres
     restart: always
     environment:
-      POSTGRES_DB: demo
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: lunar_db
+      POSTGRES_USER: lunar_user
+      POSTGRES_PASSWORD: lunar_password
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - lunar-network
+
   redis:
     image: redis:7-alpine
-    container_name: redis-local
+    container_name: redis
     ports:
       - "6379:6379"
     restart: unless-stopped
     command: redis-server --appendonly yes
+    networks:
+      - lunar-network
 
-#  app:
-#    build: .
-#    container_name: demo-app
-#    depends_on:
-#      - postgres
-#    ports:
-#      - "8080:8080"
-#    environment:
-#      SPRING_PROFILES_ACTIVE: prod
-#      DB_URL: jdbc:postgresql://postgres:5432/demo
-#      DB_USERNAME: postgres
-#      DB_PASSWORD: postgres
+  # app:
+  #   image: nvtuanq123/payment-service:1.0.2   # image trên docker hub của bạn
+  #   container_name: lunar-app
+  #   restart: always
+  #   depends_on:
+  #     - postgres
+  #     - redis
+  #   ports:
+  #     - "8080:8080"
+  #   environment:
+  #     SPRING_PROFILES_ACTIVE: prod
+  #     SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/lunar_db
+  #     SPRING_DATASOURCE_USERNAME: lunar_user
+  #     SPRING_DATASOURCE_PASSWORD: lunar_password
+  #     REDIS_HOST: redis
+  #     REDIS_PORT: 6379
+  #   networks:
+  #     - lunar-network
 
 volumes:
   postgres_data:
+
+networks:
+  lunar-network:
