--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 spring.jpa.open-in-view=false
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
-spring.redis.data.host=${REDIS_HOST:localhost}
-spring.redis.data.port=${REDIS_PORT:6379}
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
